resources/css/app.css
                                @font-face {
                                    font-family: 'Colfax';
                                    src: url('../Colfax-Light.otf') format('opentype');
                                    /* Adjust the path */
                                    /* You can also define font-weight and font-style if needed */
                                }
                                
                                body {
                                    font-family: 'Colfax', Helvetica, Arial, sans-serif;
                                    font-style: normal;
                                    font-weight: 400;
                                    color: #546b81;
                                }
                                
                                section {
                                    width: 100%;
                                    min-height: 440px;
                                    margin: auto;
                                }
                                /* *********************************  FACEBOOK & INSTAGRAM ICONS ON THE RIGHT  *********************************************** */
                                
                                .fixed-icons {
                                    position: fixed;
                                    top: 50%;
                                    right: 0;
                                    transform: translateY(-50%);
                                    display: flex;
                                    justify-content: center;
                                    align-items: center;
                                    flex-direction: column;
                                    font-size: 1.6rem;
                                    padding: 1.6rem;
                                    gap: 2rem;
                                    background-color: white;
                                }
                                
                                .fixed-icons a i {
                                    color: rgb(36, 35, 35);
                                }
                                /* *********************************  HEADER  *********************************************** */
                                
                                .navbar-custom {
                                    background-color: rgb(36, 35, 35);
                                }
                                
                                .navbar-custom .nav-item .nav-link {
                                    color: rgb(245, 245, 245);
                                }
                                
                                .navbar-custom .navbar-nav .nav-link.active,
                                .navbar-custom .navbar-nav .show>.nav-link {
                                    color: rgb(112, 112, 112);
                                }
                                
                                .navbar-custom .navbar-nav .nav-item .btn-book-room {
                                    background-color: transparent;
                                    border: 1px solid white;
                                    color: white;
                                }
                                
                                .navbar-custom .navbar-nav .nav-item .btn-book-room:hover {
                                    background-color: white;
                                    color: black;
                                }
                                
                                .navbar-toggler-icon {
                                    color: #fff;
                                }
                                
                                .nav-link {
                                    color: #fff;
                                }
                                
                                .navbar-custom .nav-item .hover {
                                    background-color: transparent;
                                    color: white;
                                }
                                
                                .navbar-custom .nav-item .hover:hover {
                                    background-color: white;
                                    color: black;
                                }
                                /* *********************************  Home  *********************************************** */
                                
                                .home {
                                    position: relative;
                                    /* Ensure the ::before pseudo-element is positioned relative to this element */
                                    background-image: url("/public/img/Group_picture.jfif");
                                    background-size: cover;
                                    background-position: center;
                                    background-attachment: fixed;
                                    background-repeat: no-repeat;
                                    color: white;
                                    height: 800px;
                                }
                                
                                .home::before {
                                    content: "";
                                    position: absolute;
                                    top: 0;
                                    right: 0;
                                    bottom: 0;
                                    left: 0;
                                }
                                
                                .home .text-center {
                                    font-size: 60px;
                                    background-color: rgba(0, 0, 0, 0.3);
                                    font-family: 'Poppins';
                                }
/* ... */

